service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: testopenshift
spec:
  selector:
    app: hello-openshift
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
